--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <div>세미나 주제 <span class="required">*</span></div>
                     <div>
                         <input type="text" name="title" placeholder="주제를 입력하세요" value="">
-                        <span>( 0 / 200 )</span>
+                        <span id="check">( 0 / 200 )</span>
                     </div>
                 </div>
                 <div class="box">
@@ -153,9 +153,9 @@
             <!-- LIST END -->
         </div>
     </article>
-
     <footer>
         <div class="container">ⓒ 세미나 등록하기. All rights reserved.</div>
     </footer>
+    <script src="main.js"></script>
 </body>
 </html>
